# hurl-language-server-prototype

./: .gitignore  Cargo.toml  README.md
src/: main.rs  models.rs
src/static_documentation/: body.md  bytes.md  cookie.md  duration.md  header.md  jsonpath.md  md5.md  regex.md  sha256.md  status.md  url.md  variable.md  xpath.md
vscode-plugin/hurl-ls/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode-plugin/hurl-ls/src/: extension.ts
