[package]
name = "hurlsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.21"
lsp-types = "0.95.1"
memchr = "2.7.1"
phf = { version = "0.11.2", features = ["macros"] }
ropey = "1.6.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
simple-logging = "2.0.2"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
url = "2.5.0"
